# turnstile

./: README.md  translate.sh
examples/: bool.eng  bool.gf  days.gf  fn_sample.gf  nat.eng  nat.gf  test.sh
examples/function/: sample.gf  test.sh
src/: Definition.gf  DefinitionAgda.gf  DefinitionCoq.gf  DefinitionEng.gf  Function.gf  FunctionCoq.gf  FunctionEng.gf  Math.gf  MathCoq.gf  MathEng.gf
translation/: Math.pgf  TAGS  stack.yaml  translation.cabal
translation/app/: Main.hs
